@@ -10,6 +10,7 @@ configure
 *.qm
 *.o
 *.so
+*.txt.user
 *.pro.user
 *.qmake.stash
 qrc_*.cpp
