@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- Fixed old Sustain/Damper/Hold pedal controller (MIDI CC#64)
+  note-off processing. (EXPERIMENTAL)
 - Have some tolerance for buffer-size changes. (EXPERIMENTAL)
 - All builds default to Qt6 (Qt >= 6.1) where available.
 - CMake is now the official build system.
